--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <div id="fuel">Fuel: 100%</div>
         <div id="engine">Engine: 100%</div>
     </div>
+<div id="debug"
+     style="font-size:10px; opacity:0.8; margin-top:5px; max-width:300px;">
+    DEBUG: waiting...
+</div>
 
     <!-- WOLF BACKGROUND -->
     <img src="wolf.png" id="wolf">
@@ -35,3 +39,4 @@
 <script src="ui.js"></script>
 </body>
 </html>
+
